--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <div class="margin-10">
         <p>목표 별 까지 한 번도 파괴되지 않고 도달할 확률을 구합니다.</p>
+        <p>찬스타임이 고려되어 있습니다.</p>
         <p>사용 금액은 고려하지 않습니다.</p>
         <p>컴퓨터의 특성 상, 오차가 존재할 수 있습니다.</p>
     </div>
@@ -55,4 +56,3 @@
     <script type="module" src="main.js"></script>
 </body>
 </html>
-
