--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>한 번도 안 터질까?</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/tag/v1/latest/plex.css" />
@@ -14,7 +15,7 @@
 
 </head>
 <body>
-    <h1 class="h1 margin-10">파괴 없이 도달 확률 계산기</h1>
+    <h1 class="h1">파괴 없이 도달 확률 계산기</h1>
 
     <div class="margin-10">
         <p>목표 별 까지 한 번도 파괴되지 않고 도달할 확률을 구합니다.</p>
