fix routing bug

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="margin-10">
         <p>목표 별 까지 <strong>한 번도 파괴되지 않고</strong> 도달할 확률을 구합니다.</p>
         <p><a href="https://maplestory.nexon.com/news/update/767" target='_blank'>KMS 1.2.401 스타포스 패치</a>가 반영되어 있습니다.</p>
-        <p>패치 이전 확률로 계산하려면 <a href="/old">여기</a>를 누르세요</p>
+        <p>패치 이전 확률로 계산하려면 <a href="./old">여기</a>를 누르세요</p>
         <p>사용 금액은 고려하지 않습니다.</p>
         <p>컴퓨터의 특성 상, 오차가 존재할 수 있습니다.</p>
     </div>
