change old html title

--- a/old/index.html
+++ b/old/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>한 번도 안 터질까?</title>
+    <title>한 번도 안 터질까? (구버전)</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
